# picosat

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  app.c  config.h  config.h.in  main.c  picogcnf.c  picomcs.c  picomus.c  picosat.c  picosat.h  version.c
examples/: example1.cnf
